# govinfo-mcp

./: .gitignore  Dockerfile  README.md  context.json  docker-compose.yml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
app/: README.md  __init__.py  __main__.py  server.py
app/tools/: __init__.py  collections.py  packages.py  published.py  related.py  search.py  statutes.py
docs/: api-docs.json  composition.md  context.md  govinfo-api-spec-formatted.json  govinfo-api-spec.json  llms-full.md  llms.md  server.md  testing.md  tools.md
tests/: README.md  test_config.py  test_govinfo_server.py  test_packages_comprehensive.py  test_runner.py  test_statutes.py  test_statutes_integration.py  test_statutes_new.py
